--- a/tools/paper/train.yaml
+++ b/tools/paper/train.yaml
@@ -12,9 +12,9 @@ data:
 train:
   epochs: 30
   render:
-    checkpoint_file_format: 'data/model/render_{epoch:02d}_{val_loss:.5f}.hdf5'
+    checkpoint_file_format: 'data/paper/model/render_{epoch:02d}_{val_loss:.5f}.hdf5'
     output_file: data/paper/model/render.hdf5
   depth:
-    checkpoint_file_format: 'data/model/depth_{epoch:02d}_{val_loss:.5f}.hdf5'
+    checkpoint_file_format: 'data/paper/model/depth_{epoch:02d}_{val_loss:.5f}.hdf5'
     output_file: data/paper/model/depth.hdf5
 
